--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,15 @@
     ],
 
     "require": {
-        "php": ">=5.5.9",
-        "symfony/form": "^2.7|^3.0|^4.0|^5.0",
-        "symfony/validator": "^2.7|^3.0|^4.0|^5.0"
+        "php": ">=8.1",
+        "symfony/form": "^5.0|^6.0",
+        "symfony/validator": "^5.0|^6.0"
     },
     "require-dev": {
-        "php": "^7.1.3",
         "ext-pdo_sqlite": "*",
         "erusev/parsedown": "^1.6",
-        "sensio/framework-extra-bundle": "^5.1",
-        "sensiolabs/security-checker": "^5.0",
+        "sensio/framework-extra-bundle": "^5.1|^6.0",
+        "sensiolabs/security-checker": "^5.0|^6.0",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
@@ -41,8 +40,7 @@
         "symfony/webpack-encore-bundle": "^1.4",
         "symfony/yaml": "*",
         "tgalopin/html-sanitizer-bundle": "^1.1",
-        "twig/extensions": "^1.5",
-        "twig/twig": "^2.6"
+        "twig/twig": "^2.6|^3.0"
     },
 
     "suggest": {
@@ -65,8 +63,7 @@
             "dev-master": "1.5-dev"
         },
         "symfony": {
-            "allow-contrib": true,
-            "require": "4.0.*"
+            "allow-contrib": true
         }
     },
     "scripts": {
@@ -74,6 +71,11 @@
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
             "security-checker security:check": "script"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true
         }
     }
 }
